# mcp-python-executor

./: .gitignore  Makefile  main.py  pyproject.toml  server.py  test_binary.py  test_server.py
tests/: conftest.py  test_errors.py  test_executor.py
